# Backend/app/routers/indexRoute.js
@@ -6,11 +6,13 @@ const superAdminRoute = require('./superAdminRouter');
 const clinicRoute = require('./clinicRouter');
 const doctorRoute = require('./doctorRouter');
 const patientRoute = require('./patientRouter');
+const subscriptionRoute = require('./subscriptionRoute');
 
 // Sub-routes Aggregation
 router.use('/auth', authRoute);
 router.use('/super-admin', superAdminRoute);
 router.use('/clinic', clinicRoute);
+router.use('/subscription', subscriptionRoute);
 // router.use('/doctor', doctorRoute);
 // router.use('/patient', patientRoute);
 
